adding in extra products

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A makeup e-commerce platform powered by Sequelize, where clean beauty meets modern convenience.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node ./seeds/index.js"
   },
   "repository": {
     "type": "git",
